Still learning: Need to figure how to start the vm

--- a/Proxmox-Services/PiHole/pihole.yml
+++ b/Proxmox-Services/PiHole/pihole.yml
@@ -8,4 +8,4 @@
         state: present
 
     - name: Install Pihole on the command line
-      shell: curl -sSL https://install.pi-hole.net | bash
+      shell: curl -sSL https://install.pi-hole.net | bash | tee install.log
